test_programs/compile_failure/array_length_defaulting/src/main.nr
fn main() {
    let x = dep::std::unsafe::zeroed();
    foo(x);
}

fn foo<N>(array: [field; N]) {
    for elem in array {
        println(elem);
    }
}
